--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,13 @@ p{
     font-size: 1.3rem;
 }
 
+.nav-link{
+    font-size: 2.5rem;
+}
+.navbar-toggler{
+    font-size: 2.5rem;
+}
+
 
 
 /* ************************** title section ************************ */
